Fix clipping of rotated elements in timeline in chrome browser

--- a/src/pages/timeline/timeline.scss
+++ b/src/pages/timeline/timeline.scss
@@ -73,7 +73,7 @@
 
         color: white;
         font-size: xx-large;
-        overflow: clip;
+        overflow: visible;
 
         @include for-mobile {
           margin: 65px 0;
